refactor: UserDTO (docs: TODO comments on store(SSR)